syntax = "proto3";

package product.v1;

option go_package = "product-service/api/proto/product/v1;productv1";

import "google/protobuf/timestamp.proto";

// ProductService provides product management operations
service ProductService {
  // Seller operations
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc UpdateProductInfo(UpdateProductInfoRequest) returns (UpdateProductInfoResponse);
  rpc UpdateProductPricing(UpdateProductPricingRequest) returns (UpdateProductPricingResponse);
  rpc PublishProduct(PublishProductRequest) returns (PublishProductResponse);
  rpc DeactivateProduct(DeactivateProductRequest) returns (DeactivateProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
  rpc GetProductsBySeller(GetProductsBySellerRequest) returns (GetProductsBySellerResponse);
  
  // Buyer operations
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc GetActiveProducts(GetActiveProductsRequest) returns (GetActiveProductsResponse);
}

// Messages

message CreateProductRequest {
  string seller_id = 1;
  string name = 2;
  string description = 3;
  int64 regular_price = 4;
  optional int64 flash_sale_price = 5;
  string currency = 6;
}

message CreateProductResponse {
  Product product = 1;
}

message UpdateProductInfoRequest {
  string product_id = 1;
  string name = 2;
  string description = 3;
}

message UpdateProductInfoResponse {
  Product product = 1;
}

message UpdateProductPricingRequest {
  string product_id = 1;
  int64 regular_price = 2;
  optional int64 flash_sale_price = 3;
  string currency = 4;
}

message UpdateProductPricingResponse {
  Product product = 1;
}

message PublishProductRequest {
  string product_id = 1;
}

message PublishProductResponse {
  Product product = 1;
}

message DeactivateProductRequest {
  string product_id = 1;
}

message DeactivateProductResponse {
  Product product = 1;
}

message DeleteProductRequest {
  string product_id = 1;
  string seller_id = 2;
}

message DeleteProductResponse {
  bool success = 1;
}

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message GetProductsBySellerRequest {
  string seller_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message GetProductsBySellerResponse {
  repeated Product products = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message GetActiveProductsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message GetActiveProductsResponse {
  repeated Product products = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// Domain models

message Product {
  string id = 1;
  string seller_id = 2;
  string name = 3;
  string description = 4;
  Pricing pricing = 5;
  string status = 6;
  string stock_status = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message Pricing {
  Money regular_price = 1;
  optional Money flash_sale_price = 2;
}

message Money {
  int64 amount = 1;
  string currency = 2;
}